--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "98a14ba8-3592-4303-a4f0-7b9ee0272341"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
